--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,34 +2,67 @@ name: Python CI
 
 on:
   push:
-    branches:
-      - '**'
+    branches: ['**']
   pull_request:
-    branches:
-      - '**'
+    branches: ['**']
   workflow_dispatch:
 
 jobs:
-  build:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run data script
-      run: |
-        python load_meteorites.py --input meteorites_sample.csv
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: outputs
-        path: |
-          outputs/
-          images/
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Show repo tree (debug)
+        run: |
+          echo "PWD=$(pwd)"
+          ls -la
+          find . -maxdepth 3 -type f | sort || true
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Find script and input, then run
+        run: |
+          set -e
+          # Find script
+          if [ -f src/load_meteorites.py ]; then
+            SCRIPT=src/load_meteorites.py
+          elif [ -f load_meteorites.py ]; then
+            SCRIPT=load_meteorites.py
+          else
+            echo "❌ load_meteorites.py not found (expected in src/ or root)."
+            exit 1
+          fi
+
+          # Find sample CSV
+          if [ -f data/meteorites_sample.csv ]; then
+            INPUT=data/meteorites_sample.csv
+          elif [ -f meteorites_sample.csv ]; then
+            INPUT=meteorites_sample.csv
+          else
+            echo "❌ meteorites_sample.csv not found (expected in data/ or root)."
+            exit 1
+          fi
+
+          echo "Using script: $SCRIPT"
+          echo "Using input : $INPUT"
+          python "$SCRIPT" --input "$INPUT"
+
+      - name: Upload artifacts (images + outputs)
+        uses: actions/upload-artifact@v4
+        with:
+          name: results
+          path: |
+            images/**
+            outputs/**
+          if-no-files-found: warn
+          retention-days: 7
